prevent auto-zoom on mobile

--- a/app/assets/stylesheets/_forms.scss
+++ b/app/assets/stylesheets/_forms.scss
@@ -1,5 +1,12 @@
 @import "variables";
 
+// prevent auto-zoom
+input[type='text'],
+input[type='number'],
+textarea {
+  font-size: 16px;
+}
+
 article.form {
   border-radius: var(--radius);
   background-color: var(--c-form--bkg);
